--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: scala
 scala: 2.10.6
 jdk: oraclejdk7
 
-before_script: ./scripts/prepublish.sh
+before_script: ./scripts/pre-publish.sh
 script:        ./scripts/ci-build.sh
 after_success: ./scripts/publish.sh
 
